k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: md-vault-frontend
  namespace: md-vault
spec:
  selector:
    app: md-vault-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
